# hermes-iterative-contextual-refinements

./: .gitignore  README.md  __init__.py  plugin.yaml  pyproject.toml
hermes_iterative_contextual_refinements/: __init__.py  adaptive.py  agentic.py  background.py  commands.py  concurrency.py  config.py  constants.py  contextual.py  dca.py  deepthink.py  doctor.py  heartbeat.py  json_utils.py  llm.py  persistence.py  plugin.py  progress.py  prompt_parity.py  prompts.py  python_runtime.py  run_record.py  runner.py  schemas.py  source_prompts.py  state_machine.py  tools.py
hermes_iterative_contextual_refinements/skills/icr-agentic-refinement/: SKILL.md
hermes_iterative_contextual_refinements/skills/icr-contextual-refinement/: SKILL.md
hermes_iterative_contextual_refinements/skills/icr-deepthink/: SKILL.md
hermes_iterative_contextual_refinements/skills/icr-prompt-parity/: SKILL.md
hermes_iterative_contextual_refinements/skills/icr-results-review/: SKILL.md
hermes_iterative_contextual_refinements/skills/icr-runner/: SKILL.md
hermes_iterative_contextual_refinements/skills/icr-state-machine/: SKILL.md
hermes_iterative_contextual_refinements/source_prompts/: AdaptiveDeepthinkPrompt.ts  AgenticModePrompt.ts  ContextualPrompts.ts  DCAPrompts.ts  DeepthinkPrompts.ts
tests/: test_icr_plugin.py
