[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-iterative-contextual-refinements"
version = "0.2.2"
description = "Hermes Agent plugin for Iterative Contextual Refinements."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "local" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
icr-prompt-parity = "hermes_iterative_contextual_refinements.prompt_parity:main"
icr-hermes-doctor = "hermes_iterative_contextual_refinements.doctor:main"

[project.entry-points."hermes_agent.plugins"]
hermes-iterative-contextual-refinements = "hermes_iterative_contextual_refinements"

[tool.setuptools]
packages = ["hermes_iterative_contextual_refinements"]

[tool.setuptools.package-data]
hermes_iterative_contextual_refinements = ["skills/*/SKILL.md", "source_prompts/*.ts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
